Replaced flex property with 'font-size: 0px' fix for white space between divs.

--- a/first/css/style.css
+++ b/first/css/style.css
@@ -11,7 +11,7 @@ header {
 .content-wrapper {
   width: 100%;
   height: 800px;
-  display: flex;
+  font-size: 0px;
 }
 
 .columns {
