--- a/second/css/styles.css
+++ b/second/css/styles.css
@@ -6,13 +6,15 @@ body {
 .content-wrapper {
   width: 100%;
   height: 800px;
-  display: flex;
+  font-size: 0px;
   overflow: hidden;
 }
 
 .columns {
   width: 33.3%;
   height: 100%;
+  display: inline-block;
+  overflow: hidden;
 }
 
 .left-column {
@@ -24,14 +26,13 @@ body {
 }
 
 .right-column {
-  overflow: hidden;
+
 }
 
 .green-partition {
   background-color: #afe57b;
   height: 80%;
   width: 100%;
-  overflow: hidden;
 }
 
 .image-placeholder {
@@ -48,5 +49,4 @@ body {
   text-align: center;
   font-size: 20px;
   margin-top: 20%;
-  margin-bottom: 20%;
 }
